style.css
.profile-picture {
  border-radius: 50%;
}

html, body {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  margin: 0px;
  padding: 0px;
  font-family: sans-serif;
  background-color: #F5F5F5;
}


/* Add a black background color to the top navigation */
.topnav {
  position: fixed;
  top: 0;
  width: 100%;
  background-color: #454545;
  overflow: hidden;
}

/* Style the links inside the navigation bar */
.topnav a {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

/* Change the color of links on hover */
.topnav a:hover {
  color: #ff5733;
}

/* Add a color to the active/current link */
.topnav a.active {
  color: #ff5733;
  font-weight: bold;
}


.wrapper {
  margin: 0px;
}


.row1 {
  background-color: #F5F5F5;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
}


.left, .right {
  margin: 5px;
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-basis: 100%;
  flex: 1;
}

.left {
  align-items: center;
  justify-content: center;
}


.right {
  line-height: 1.4;
  padding-right : 5%;
}
.name {
 line-height: 0;
}


.subtitle {
 color: #909090;
 text-align: center;
 margin-bottom: 5px;
 margin-top: 5px;
 }

.workplace-link {
 color:  #ff5733;
 text-decoration: none;
 text-align: center;
 margin-bottom: 5px;
 margin-top: 5px;
 }

.social-links, .skill-icons{
  list-style: none;
  padding-left: 0px;
  font-size: 32px;
  line-height: 0;
}

.social-links li {
  display: inline-block;
  margin-right: 8px;
}

.social-links a {
  text-decoration: none;
  padding: 4px;
  color:  #ff5733;
}

.social-links li:hover {
  transform: scale(1.5);
}

.skill-icons li {
  display: inline-block;
  margin-right: 50px;
  color:  #ff5733;
  line-height: 2;
}

.text-skills{
  list-style: none;
  line-height: 0;
  color:  #000000;
  font-size: 15px;
}

.pub-links{
  text-decoration: none;
  color:  #ff5733;
  font-size: 20px;
  font-weight: bold;
}

